@@ -1,1 +1,4 @@
 # SE_Final-Project_Event-Booking-System
+
+JAVAFX VM
+--module-path "C:\Program Files\Java\javafx-sdk-24\lib" --add-modules javafx.controls,javafx.fxml --enable-native-access=javafx.graphics --enable-native-access=ALL-UNNAMED
